# ZnFrame

./: .gitignore  README.md  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yaml
bonds/: __init__.py
tests/: test_znframe.py
znframe/: frame.py  vec.py
znframe/bonds/: __init__.py
